precommit fixes